--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -162,8 +162,6 @@
         >
         </app-sched-c1>
 
-        
-
         <!-- <app-sched-c2
           [hidden]="scheduleType !== 'sched_c2'"
           [transactionTypeText]="transactionTypeTextSchedC"
@@ -173,6 +171,11 @@
           (status)="onNotify($event)"
         >
         </app-sched-c2> -->
+
+        <app-debt-summary
+          *ngIf="scheduleType === 'sched_d_ds'"
+          (status)="onNotify($event)">          
+        </app-debt-summary>
 
         <app-sched-h1
           *ngIf="scheduleType === 'sched_h1'"
