--- a/front-end/src/app/forms/sched-f/sched-f.component.html
+++ b/front-end/src/app/forms/sched-f/sched-f.component.html
@@ -467,10 +467,7 @@
                             " id="typeahead-template-org" [ngbTypeahead]="searchOrg" [focusFirst]=false
                           [resultTemplate]="rtOrg" [inputFormatter]="formatterOrgName"
                           (selectItem)="handleSelectedOrg($event, col)" (keyup)="handleFormFieldKeyup($event, col)" />
-                        <input *ngIf="isFieldName(col?.name, 'donor_cmte_id') ||
-                                  isFieldName(col?.name, 'payee_cmte_id') ||
-                                  isFieldName(col?.name, 'beneficiary_cmte_id') ||
-                                  isFieldName(col?.name, 'beneficiary_cand_id')" class="form-control"
+                        <input *ngIf="isFieldName(col?.name, 'payee_cmte_id')" class="form-control"
                           [style.width]="col?.width" [style.height]="col?.height" [attr.type]="col?.type"
                           [attr.name]="col?.name" [attr.value]="col?.value" [maxlength]="col?.validation?.max"
                           [formControlName]="col?.name" [ngClass]="
@@ -479,11 +476,11 @@
                                 ? 'input-field-error'
                                 : ''
                             " id="typeahead-template-committee-id" 
-                          [ngbTypeahead]="isFieldName(col?.name, 'beneficiary_cand_id') ? searchCandidateId : searchCommitteeId" 
+                          [ngbTypeahead]="searchPayeeCommitteeId" 
                           [focusFirst]=false
-                          [resultTemplate]="isFieldName(col?.name, 'beneficiary_cand_id') ? rtCandidateId : rtCommitteeId" 
-                          [inputFormatter]="isFieldName(col?.name, 'beneficiary_cand_id') ? formatterCandidateId: formatterCommitteeId"
-                          (selectItem)="handleSelectedOrg($event, col)" (keyup)="handleFormFieldKeyup($event, col)" />
+                          [resultTemplate]="rtCandidateId" 
+                          [inputFormatter]="formatterPayeeCommitteeId"
+                          (selectItem)="handleSelectedCandidate($event, col)" (keyup)="handleFormFieldKeyup($event, col)" />
                         <input *ngIf="isFieldName(col?.name, 'donor_cmte_name') ||
                                   isFieldName(col?.name, 'beneficiary_cmte_name')" class="form-control"
                           [style.width]="col?.width" [style.height]="col?.height" [attr.type]="col?.type"
