update column name

--- a/front-end/src/app/forms/transactions/sub-transactions-table/sub-transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/sub-transactions-table/sub-transactions-table.component.html
@@ -31,15 +31,16 @@
         Type
         <i class="fa fa-sort" aria-hidden="false"></i>
       </th>
-      <th *ngIf="isH4OrH6() === 'H4'">
-        Puporse
+      <th *ngIf="isH4OrH6() === 'H4' || isH4OrH6() === 'H6'">
+        Purpose
         <i class="fa fa-sort" aria-hidden="false"></i>
       </th>
       <th *ngIf="isH4OrH6() === 'H6'">
         Name/Organization
         <i class="fa fa-sort" aria-hidden="false"></i>
       </th>
-      <th>Amount
+      <th *ngIf="isH4OrH6() !== 'H6'">
+        Amount
           <i class="fa fa-sort" aria-hidden="false"></i>
       </th>
       <th *ngIf="isH4OrH6() === 'H4' || isH4OrH6() === 'H6'">
