--- a/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
+++ b/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
@@ -1,3 +1,137 @@
-<p>
-  debt-summary works!
-</p>
+<div class="header-content">
+  <h1>
+    F3X / Schedule-D / Debt Summary
+  </h1>
+  <br />
+</div>
+<div class="debtSumamry__table-container">
+  <div class="grid-row float-right debtSumamry__page-item-range">
+    <div class="float-right debtSumamry__item-range">{{ determineItemRange() }} of {{ debtModel?.length }}</div>
+  </div>
+  <table class="table table-striped table-hover table__sortable debtSumamry__table">
+    <thead>
+      <tr>
+        <th class="debtSumamry__table-checkbox">
+          <input
+            [@fadeInOut]
+            type="checkbox"
+            [(ngModel)]="allDebtSelected"
+            (change)="changeAllDebtSummarysSelected()"
+          />
+        </th>
+        <th
+          [@fadeInOut]
+          *ngIf="isColumnVisible('name')"
+          [class]="getSortClass('name')"
+          (click)="changeSortDirection('name')"
+        >
+          Name
+        </th>
+        <th
+          [@fadeInOut]
+          *ngIf="isColumnVisible('beginningBalance')"
+          [class]="getSortClass('beginningBalance')"
+          (click)="changeSortDirection('beginningBalance')"
+        >
+          Beginning Balance<br />(for this period)
+        </th>
+        <th
+          [@fadeInOut]
+          *ngIf="isColumnVisible('incurredAmt')"
+          [class]="getSortClass('incurredAmt')"
+          (click)="changeSortDirection('incurredAmt')"
+        >
+          Incurred Amount<br />(for this period)
+        </th>
+        <th
+          [@fadeInOut]
+          *ngIf="isColumnVisible('paymentAmt')"
+          [class]="getSortClass('paymentAmt')"
+          (click)="changeSortDirection('paymentAmt')"
+        >
+          Payment Amount<br />(for this period)
+        </th>
+        <th
+          [@fadeInOut]
+          *ngIf="isColumnVisible('closingBalance')"
+          [class]="getSortClass('closingBalance')"
+          (click)="changeSortDirection('closingBalance')"
+        >
+          Balance At Close<br />(for this period)
+        </th>
+
+        <th class="bulk_action">
+          <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+            <button
+              class="btn btn-sm btn-primary debtSumamry__bulk_action_btn"
+              ngbDropdownToggle
+              [disabled]="bulkActionDisabled"
+            >
+              <i class="ellipsis-icon"></i>
+            </button>
+            <div id="debtSumamry__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+              <button class="dropdown-item" (click)="printAllSelected()"><i class="print-icon"></i> Print</button>
+              <button class="dropdown-item" (click)="exportAllSelected()">
+                <i class="file-export-icon"></i> Export
+              </button>
+            </div>
+          </div>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngFor="let debt of debtModel | paginate: { itemsPerPage: 10, currentPage: currentPageNumber }">
+        <tr>
+          <td>
+            <input [(ngModel)]="debt.selected" type="checkbox" (click)="checkForMultiChecked($event)" />
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('name')">
+            {{ debt.name }}
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('beginningBalance')">
+            {{ debt.beginningBalance | currency: 'USD':'symbol-narrow':'1.2-2' }}
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('incurredAmt')">
+            {{ debt.incurredAmt | currency: 'USD':'symbol-narrow':'1.2-2' }}
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('paymentAmt')">
+            {{ debt.paymentAmt | currency: 'USD':'symbol-narrow':'1.2-2' }}
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('closingBalance')">
+            {{ debt.closingBalance | currency: 'USD':'symbol-narrow':'1.2-2' }}
+          </td>
+          <td>
+            <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+              <button class="btn btn-sm btn-primary" ngbDropdownToggle [disabled]="!bulkActionDisabled">
+                <i class="ellipsis-icon"></i>
+              </button>
+              <div id="debtSumamry__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                <button class="dropdown-item" (click)="editDebt(debt)"><i class="edit-icon"></i> Edit</button>
+                <button class="dropdown-item" (click)="editDebt(debt)"><i class="edit-icon"></i> Make a Payment</button>
+                <button class="dropdown-item" (click)="printDebt(debt)"><i class="print-icon"></i> Print</button>
+                <button class="dropdown-item" (click)="trashDebt(debt)"><i class="trash-icon"></i> Trash</button>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <ng-container *ngIf="trx && trx.child">
+          <tr [ngbCollapse]="trx.child ? !trx.toggleChild : ''" *ngFor="let trxChild of trx.child" class="child-bg">
+            <td style="padding-left: 1.5rem;">
+              <input [(ngModel)]="trxChild.selected" type="checkbox" (click)="checkForMultiChecked($event)" />
+            </td>
+            <td>name</td>
+            <td>beg bal</td>
+            <td>incurred amt</td>
+            <td>payment</td>
+            <td>closing bal</td>
+            <td>action</td>
+          </tr>
+        </ng-container>
+      </ng-container>
+    </tbody>
+  </table>
+  <hr />
+  <div class="d-flex justify-content-center debtSumamry__table-pagination-container">
+    <pagination-controls (pageChange)="currentPageNumber = $event"> </pagination-controls>
+  </div>
+</div>
