loan payment summary and edit and debt payment fix

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -151,6 +151,7 @@
           *ngIf="scheduleType === 'sched_c_loan_payment'"
           [transactionDetail]="transactionDetailSchedC"
           (status)="onNotify($event)"
+          [scheduleAction]="loanPaymentScheduleAction"
         >
         </app-loanpayment>
 
