--- a/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.scss
+++ b/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.scss
@@ -133,6 +133,11 @@
     background-color: #D9EDF6!important;
   }
 
+  .payment-bg {
+    padding-left: 80px;
+    background-color: #D9ECDE!important;
+  }
+
   // .loanSumamry__total-amount-container {
   //   margin: 1.5em 0;
   // }
