--- a/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
+++ b/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
@@ -25,6 +25,7 @@
             type="text" [disabled]="true">
           </ng-select>
         </div>
+        <input type="hidden" id="entity_id" name="entity_id" ngModel>
       </div>
 
       <!-- Individual Name Row -->
