reloading loan summary on refresh

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -144,6 +144,7 @@
         
         <app-loansummary 
           *ngIf="scheduleType === 'sched_c_ls'"
+          [formType]="'3X'"
           (status)="onNotify($event)">          
         </app-loansummary>
 
