--- a/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
+++ b/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
@@ -29,6 +29,14 @@
         </th>
         <th
           [@fadeInOut]
+          *ngIf="isColumnVisible('paymentDate')"
+          [class]="getSortClass('paymentDate')"
+          (click)="changeSortDirection('paymentDate')"
+        >
+          Date
+        </th>
+        <th
+          [@fadeInOut]
           *ngIf="isColumnVisible('beginningBalance')"
           [class]="getSortClass('beginningBalance')"
           (click)="changeSortDirection('beginningBalance')"
@@ -85,8 +93,21 @@
           <td>
             <input [(ngModel)]="debt.selected" type="checkbox" (click)="checkForMultiChecked($event)" />
           </td>
-          <td [@fadeInOut] *ngIf="isColumnVisible('name')">
+          <td
+            [@fadeInOut]
+            [ngClass]="debt.child ? 'parent' : ''"
+            (click)="debt.child ? (debt.toggleChild = !debt.toggleChild) : ''"
+            *ngIf="isColumnVisible('name')"
+          >
             {{ debt.name }}
+            <div
+              *ngIf="debt.child"
+              class="align_right arrow"
+              [ngClass]="debt.toggleChild ? 'arrow-top' : 'arrow-bottom'"
+            ></div>
+          </td>
+          <td [@fadeInOut] *ngIf="isColumnVisible('paymentDate')">
+            {{ debt.paymentDate | date: 'MM/dd/yyyy' }}
           </td>
           <td [@fadeInOut] *ngIf="isColumnVisible('beginningBalance')">
             {{ debt.beginningBalance | currency: 'USD':'symbol-narrow':'1.2-2' }}
@@ -114,19 +135,30 @@
             </div>
           </td>
         </tr>
-        <ng-container *ngIf="trx && trx.child">
-          <tr [ngbCollapse]="trx.child ? !trx.toggleChild : ''" *ngFor="let trxChild of trx.child" class="child-bg">
-            <td style="padding-left: 1.5rem;">
-              <input [(ngModel)]="trxChild.selected" type="checkbox" (click)="checkForMultiChecked($event)" />
-            </td>
-            <td>name</td>
-            <td>beg bal</td>
-            <td>incurred amt</td>
-            <td>payment</td>
-            <td>closing bal</td>
-            <td>action</td>
-          </tr>
-        </ng-container>
+        <tr [ngbCollapse]="debt.child ? !debt.toggleChild : ''" *ngFor="let debtChild of debt.child" class="child-bg">
+          <td></td>
+          <td class="child-bg-text">{{ debtChild.name }}</td>
+          <td class="child-bg-text">{{ debt.paymentDate | date: 'MM/dd/yyyy' }}</td>
+          <td></td>
+          <td></td>
+          <td class="child-bg-text">{{ debtChild.paymentAmt | currency: 'USD':'symbol-narrow':'1.2-2' }}</td>
+          <td></td>
+          <td>
+            <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+              <button class="btn btn-sm btn-primary" ngbDropdownToggle >
+                <i class="ellipsis-icon"></i>
+              </button>
+              <div id="debtSumamry__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                <button class="dropdown-item" (click)="editDebtPayment(debtChild)">
+                  <i class="edit-icon"></i> Edit
+                </button>
+                <button class="dropdown-item" (click)="trashDebtPayment(debtChild)">
+                  <i class="trash-icon"></i> Trash
+                </button>
+              </div>
+            </div>
+          </td>
+        </tr>
       </ng-container>
     </tbody>
   </table>
