force change detection for debt summary

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -178,6 +178,7 @@
 
         <app-debt-summary
           *ngIf="scheduleType === 'sched_d_ds'"
+          [forceChangeDetection]="forceChangeDetectionDebtSummary"
           (status)="onNotify($event)">          
         </app-debt-summary>
 
