--- a/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
+++ b/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
@@ -6,62 +6,49 @@
 </div>
 <div class="debtSumamry__table-container">
   <div class="grid-row float-right debtSumamry__page-item-range">
-    <div class="float-right debtSumamry__item-range">{{ determineItemRange() }} of {{ debtModel?.length }}</div>
+    <!-- <div class="float-right debtSumamry__item-range">{{ determineItemRange() }} of {{ debtModel?.length }}</div> -->
   </div>
   <table class="table table-striped table-hover table__sortable debtSumamry__table">
     <thead>
       <tr>
         <th class="debtSumamry__table-checkbox">
           <input
-            [@fadeInOut]
             type="checkbox"
             [(ngModel)]="allDebtSelected"
             (change)="changeAllDebtSummarysSelected()"
           />
         </th>
         <th
-          [@fadeInOut]
-          *ngIf="isColumnVisible('name')"
           [class]="getSortClass('name')"
           (click)="changeSortDirection('name')"
         >
           Name
         </th>
         <th
-          [@fadeInOut]
-          *ngIf="isColumnVisible('paymentDate')"
           [class]="getSortClass('paymentDate')"
           (click)="changeSortDirection('paymentDate')"
         >
           Date
         </th>
         <th
-          [@fadeInOut]
-          *ngIf="isColumnVisible('beginningBalance')"
           [class]="getSortClass('beginningBalance')"
           (click)="changeSortDirection('beginningBalance')"
         >
           Beginning Balance<br />(for this period)
         </th>
         <th
-          [@fadeInOut]
-          *ngIf="isColumnVisible('incurredAmt')"
           [class]="getSortClass('incurredAmt')"
           (click)="changeSortDirection('incurredAmt')"
         >
           Incurred Amount<br />(for this period)
         </th>
         <th
-          [@fadeInOut]
-          *ngIf="isColumnVisible('paymentAmt')"
           [class]="getSortClass('paymentAmt')"
           (click)="changeSortDirection('paymentAmt')"
         >
           Payment Amount<br />(for this period)
         </th>
         <th
-          [@fadeInOut]
-          *ngIf="isColumnVisible('closingBalance')"
           [class]="getSortClass('closingBalance')"
           (click)="changeSortDirection('closingBalance')"
         >
@@ -69,7 +56,7 @@
         </th>
 
         <th class="bulk_action">
-          <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+          <div class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
             <button
               class="btn btn-sm btn-primary debtSumamry__bulk_action_btn"
               ngbDropdownToggle
@@ -94,10 +81,8 @@
             <input [(ngModel)]="debt.selected" type="checkbox" (click)="checkForMultiChecked($event)" />
           </td>
           <td
-            [@fadeInOut]
             [ngClass]="debt.child ? 'parent' : ''"
             (click)="debt.child ? (debt.toggleChild = !debt.toggleChild) : ''"
-            *ngIf="isColumnVisible('name')"
           >
             {{ debt.name }}
             <div
@@ -106,19 +91,19 @@
               [ngClass]="debt.toggleChild ? 'arrow-top' : 'arrow-bottom'"
             ></div>
           </td>
-          <td [@fadeInOut] *ngIf="isColumnVisible('paymentDate')">
+          <td>
             {{ debt.paymentDate | date: 'MM/dd/yyyy' }}
           </td>
-          <td [@fadeInOut] *ngIf="isColumnVisible('beginningBalance')">
+          <td>
             {{ debt.beginningBalance | currency: 'USD':'symbol-narrow':'1.2-2' }}
           </td>
-          <td [@fadeInOut] *ngIf="isColumnVisible('incurredAmt')">
+          <td>
             {{ debt.incurredAmt | currency: 'USD':'symbol-narrow':'1.2-2' }}
           </td>
-          <td [@fadeInOut] *ngIf="isColumnVisible('paymentAmt')">
+          <td>
             {{ debt.paymentAmt | currency: 'USD':'symbol-narrow':'1.2-2' }}
           </td>
-          <td [@fadeInOut] *ngIf="isColumnVisible('closingBalance')">
+          <td>
             {{ debt.closingBalance | currency: 'USD':'symbol-narrow':'1.2-2' }}
           </td>
           <td>
