update html for h2/h3/h5

--- a/front-end/src/app/forms/sched-h3/sched-h3.component.html
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.html
@@ -370,7 +370,7 @@
                   Previous
                 </button>
                 <a class="btn btn-primary btn-right" (click)="returnToSum()">
-                  Save & View Summary
+                  View Summary
                 </a>
               </div>
             </div>
