--- a/front-end/src/app/forms/sched-h2/sched-h2.component.html
+++ b/front-end/src/app/forms/sched-h2/sched-h2.component.html
@@ -99,7 +99,7 @@
                 "
               />
               <div class="text-error text-left" *ngIf="schedH2.get('activity_event_name').errors?.maxlength">
-                Only 40 characters allowed.
+                Only 90 characters allowed.
               </div>
             </div>
           </div>
@@ -173,8 +173,8 @@
                     ? 'input-field-error'
                     : ''
                 "
-                >New</label
-              >
+                >New
+              </label>
             </div>
             <div class="col-md-4">
               <input type="radio" formControlName="ratio_code" value="r" id="ratio2"/>
@@ -184,8 +184,8 @@
                     ? 'input-field-error'
                     : ''
                 "
-                >Revised</label
-              >
+                >Revised
+              </label>
             </div>
             <div class="col-md-4">
               <input type="radio" formControlName="ratio_code" value="s" id="ratio3"/>
@@ -195,8 +195,8 @@
                     ? 'input-field-error'
                     : ''
                 "
-                >RevisedSame as Previously Reported</label
-              >
+                >Same as Previously Reported
+              </label>
             </div>
           </div>
         </div>
@@ -217,6 +217,7 @@
                     : ''
                 "
                 (keyup)="handleFedPercentFieldKeyup($event)"
+                (blur)="handleOnFedBlurEvent($event)"
               />
               <div class="input-group-prepend">
                 <span class="input-group-text" id="filter-max-amount">
@@ -246,6 +247,7 @@
                     : ''
                 "
                 (keyup)="handleNonFedPercentFieldKeyup($event)"
+                (blur)="handleOnNonFedBlurEvent($event)"
               />
               <div class="input-group-prepend">
                 <span class="input-group-text" id="filter-max-amount">
@@ -339,12 +341,12 @@
                     <div *ngIf="item.ratio_code == 's'">Same as Previously Reported</div>
                   </td>
                   <td>
-                    <div *ngIf="item.federal_percent < 0.1">{{ item.federal_percent | percent: '1.0-2' }}</div>
-                    <div *ngIf="item.federal_percent >= 0.1">{{ item.federal_percent | percent: '2.0-2' }}</div>
+                    <div *ngIf="item.federal_percent < 0.1">{{ item.federal_percent | percent: '1.2-2' }}</div>
+                    <div *ngIf="item.federal_percent >= 0.1">{{ item.federal_percent | percent: '2.2-2' }}</div>
                   </td>
                   <td>
-                    <div *ngIf="item.non_federal_percent < 0.1">{{ item.non_federal_percent | percent: '1.0-2' }}</div>
-                    <div *ngIf="item.non_federal_percent >= 0.1">{{ item.non_federal_percent | percent: '2.0-2' }}</div>
+                    <div *ngIf="item.non_federal_percent < 0.1">{{ item.non_federal_percent | percent: '1.2-2' }}</div>
+                    <div *ngIf="item.non_federal_percent >= 0.1">{{ item.non_federal_percent | percent: '2.2-2' }}</div>
                   </td>
 
                   <td class="bulk_action">
