debt summary payments

--- a/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.scss
+++ b/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.scss
@@ -135,13 +135,18 @@
     cursor: pointer !important;
   }
 
-  .child-bg {
+  // .child-bg {
+  //   padding-left: 80px;
+  //   background-color: #d9edf6 !important;
+  //   .child-bg-text {
+  //     padding-left: 1.75em;
+  //     font-style: italic;
+  //   }
+  // }
+
+  .payment-bg {
     padding-left: 80px;
-    background-color: #d9edf6 !important;
-    .child-bg-text {
-      padding-left: 1.75em;
-      font-style: italic;
-    }
+    background-color: #D9ECDE!important;
   }
 
   // .debtSumamry__total-amount-container {
