--- a/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
+++ b/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
@@ -12,46 +12,24 @@
     <thead>
       <tr>
         <th class="debtSumamry__table-checkbox">
-          <input
-            type="checkbox"
-            [(ngModel)]="allDebtSelected"
-            (change)="changeAllDebtSummarysSelected()"
-          />
+          <input type="checkbox" [(ngModel)]="allDebtSelected" (change)="changeAllDebtSummarysSelected()" />
         </th>
-        <th
-          [class]="getSortClass('name')"
-          (click)="changeSortDirection('name')"
-        >
+        <th [class]="getSortClass('name')" (click)="changeSortDirection('name')">
           Name
         </th>
-        <th
-          [class]="getSortClass('paymentDate')"
-          (click)="changeSortDirection('paymentDate')"
-        >
+        <th [class]="getSortClass('paymentDate')" (click)="changeSortDirection('paymentDate')">
           Date
         </th>
-        <th
-          [class]="getSortClass('beginningBalance')"
-          (click)="changeSortDirection('beginningBalance')"
-        >
+        <th [class]="getSortClass('beginningBalance')" (click)="changeSortDirection('beginningBalance')">
           Beginning Balance<br />(for this period)
         </th>
-        <th
-          [class]="getSortClass('incurredAmt')"
-          (click)="changeSortDirection('incurredAmt')"
-        >
+        <th [class]="getSortClass('incurredAmt')" (click)="changeSortDirection('incurredAmt')">
           Incurred Amount<br />(for this period)
         </th>
-        <th
-          [class]="getSortClass('paymentAmt')"
-          (click)="changeSortDirection('paymentAmt')"
-        >
+        <th [class]="getSortClass('paymentAmt')" (click)="changeSortDirection('paymentAmt')">
           Payment Amount<br />(for this period)
         </th>
-        <th
-          [class]="getSortClass('closingBalance')"
-          (click)="changeSortDirection('closingBalance')"
-        >
+        <th [class]="getSortClass('closingBalance')" (click)="changeSortDirection('closingBalance')">
           Balance At Close<br />(for this period)
         </th>
 
@@ -80,16 +58,8 @@
           <td>
             <input [(ngModel)]="debt.selected" type="checkbox" (click)="checkForMultiChecked($event)" />
           </td>
-          <td
-            [ngClass]="debt.child ? 'parent' : ''"
-            (click)="debt.child ? (debt.toggleChild = !debt.toggleChild) : ''"
-          >
+          <td>
             {{ debt.name }}
-            <div
-              *ngIf="debt.child"
-              class="align_right arrow"
-              [ngClass]="debt.toggleChild ? 'arrow-top' : 'arrow-bottom'"
-            ></div>
           </td>
           <td>
             {{ debt.paymentDate | date: 'MM/dd/yyyy' }}
@@ -100,8 +70,13 @@
           <td>
             {{ debt.incurredAmt | currency: 'USD':'symbol-narrow':'1.2-2' }}
           </td>
-          <td>
+          <td [ngClass]="debt.child ? 'parent' : ''" (click)="debt.child ? (debt.toggleChild = !debt.toggleChild) : ''">
             {{ debt.paymentAmt | currency: 'USD':'symbol-narrow':'1.2-2' }}
+            <div
+              *ngIf="debt.child"
+              class="align_right arrow"
+              [ngClass]="debt.toggleChild ? 'arrow-top' : 'arrow-bottom'"
+            ></div>
           </td>
           <td>
             {{ debt.closingBalance | currency: 'USD':'symbol-narrow':'1.2-2' }}
@@ -120,7 +95,7 @@
             </div>
           </td>
         </tr>
-        <tr [ngbCollapse]="debt.child ? !debt.toggleChild : ''" *ngFor="let debtChild of debt.child" class="child-bg">
+        <!-- <tr [ngbCollapse]="debt.child ? !debt.toggleChild : ''" *ngFor="let debtChild of debt.child" class="child-bg">
           <td></td>
           <td class="child-bg-text">{{ debtChild.name }}</td>
           <td class="child-bg-text">{{ debt.paymentDate | date: 'MM/dd/yyyy' }}</td>
@@ -143,7 +118,39 @@
               </div>
             </div>
           </td>
-        </tr>
+        </tr> -->
+
+        <ng-container *ngIf="debt?.child?.length > 0">
+          <tr [ngbCollapse]="debt?.child?.length > 0 ? !debt.toggleChild : ''" class="payment-bg">
+            <th style="padding-left: 70px;" colspan="3">Type</th>
+            <th colspan="2">Payment Date</th>
+            <th colspan="3">Payment Amount</th>
+          </tr>
+          <tr
+            [ngbCollapse]="debt?.child?.length > 0 ? !debt.toggleChild : ''"
+            *ngFor="let payment of debt.child"
+            class="payment-bg"
+          >
+            <td style="padding-left: 70px;" colspan="3">{{ payment.transactionTypeDescription }}</td>
+            <td [@fadeInOut] colspan="2">{{ payment.paymentDate | date: 'MM/dd/yyyy' }}</td>
+            <td [@fadeInOut] colspan="2">{{ payment.paymentAmt | currency: 'USD':'symbol-narrow':'1.2-2' }}</td>
+            <td>
+              <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+                <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                  <i class="ellipsis-icon"></i>
+                </button>
+                <div id="debtSumamry__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                  <button class="dropdown-item" (click)="editDebtPayment(payment)">
+                    <i class="edit-icon"></i> Edit
+                  </button>
+                  <button class="dropdown-item" (click)="trashDebtPayment(payment)">
+                    <i class="trash-icon"></i> Trash
+                  </button>
+                </div>
+              </div>
+            </td>
+          </tr>
+        </ng-container>
       </ng-container>
     </tbody>
   </table>
