fixes for filters, alltransactions and loans tab api

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -33,7 +33,7 @@
         *ngIf="!allTransactions"
       >
       </transaction-sidebar>
-      <app-transactions-filter [hidden]="!isShowFilters" title="Filters" [formType]="formType">
+      <app-transactions-filter [hidden]="!allTransactions && !isShowFilters" title="Filters" [formType]="formType">
       </app-transactions-filter>
     </div>
   </div>
