paginate debt summary and add transaction type

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -179,6 +179,7 @@
         <app-debt-summary
           *ngIf="scheduleType === 'sched_d_ds'"
           [forceChangeDetection]="forceChangeDetectionDebtSummary"
+          [transactionType]="transactionType"
           (status)="onNotify($event)">          
         </app-debt-summary>
 
