--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -97,13 +97,7 @@
             style="align-self:stretch;"
             type="button"
             class="btn btn-secondary-dark-gray mr-2"
-            [routerLink]="['/forms/form/', '3X']"
-            [queryParams]="{
-              step: 'transactions',
-              reportId: reportId,
-              edit: editMode,
-              transactionCategory: 'receipts'
-            }"
+            (click)="goToAllTransactions()"
           >
             All Transactions
           </button>
