H's summary edit action

--- a/front-end/src/app/forms/sched-h4/sched-h4.component.html
+++ b/front-end/src/app/forms/sched-h4/sched-h4.component.html
@@ -216,18 +216,13 @@
                                 </button>
 
                                 <div id="sched-h4__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
-                                    <button class="dropdown-item" (click)="viewditH4(item)">
-                                        <i class="fas fa-eye"></i> View
+                                    <button class="dropdown-item" (click)="editTransaction(item)">
+                                        <i class="fas fa-edit"></i> Edit
                                     </button>
                                     <button class="dropdown-item">
                                         <i class="fas fa-print"></i> Print
                                     </button>
-                                    <button class="dropdown-item">
-                                      <i class="fas file-export-icon"></i> Export
-                                    </button>
-                                    <button class="dropdown-item">
-                                        <i class="fas fa-link"></i> Link
-                                      </button>
+                                    <button class="dropdown-item"><i class="fas fa-copy"></i> Clone</button>
                                     <button class="dropdown-item">
                                         <i class="fas fa-trash"></i> Trash
                                     </button>
