--- a/front-end/src/app/forms/sched-h2/sched-h2.component.html
+++ b/front-end/src/app/forms/sched-h2/sched-h2.component.html
@@ -24,7 +24,7 @@
           <h2>
             Allocation Ratios
             <!-- <ng-container *ngIf="transactionTypeText"> / {{ transactionTypeText }} </ng-container> -->
-            <!-- <ng-container *ngIf="scheduleAction === editScheduleAction"> / Edit </ng-container> -->
+            <ng-container *ngIf="scheduleAction === editScheduleAction"> / Edit </ng-container>
           </h2>
         </div>
         <div class="float-right" ngbDropdown>
@@ -274,15 +274,25 @@
           <div class="grid-row">
             <div class="grid-row__col grid-row__col--12">
               <div class="forms__btn-container">
-                <button class="btn btn-previous btn-left" type="button" (click)="clearFormValues(); previousStep()">
-                  Previous
-                </button>
-                <a class="btn btn-primary btn-right" (click)="returnToSum()">
-                  Summary
-                </a>
-                <button class="btn btn-previous btn-right" type="button" (click)="saveAndAddMore()">
-                  Add
-                </button>
+                <div *ngIf="scheduleAction === addScheduleAction">
+                  <button class="btn btn-previous btn-left" type="button" (click)="clearFormValues(); previousStep()">
+                    Previous
+                  </button>
+                  <a class="btn btn-primary btn-right" (click)="returnToSum()">
+                    Summary
+                  </a>
+                  <button class="btn btn-previous btn-right" type="button" (click)="saveAndAddMore()">
+                    Add
+                  </button>
+                </div>
+                <div *ngIf="scheduleAction === editScheduleAction">
+                  <button class="btn btn-previous btn-left" type="button" (click)="cancelReturnToSum()">
+                      Cancel
+                    </button>
+                    <button class="btn btn-primary btn-right" type="button" (click)="saveEdit()">
+                      Save
+                    </button>
+                </div>
               </div>
             </div>
           </div>
@@ -356,8 +366,9 @@
                       </button>
 
                       <div id="sched-h2__dropdown-action" ngbDropdownToggle class="dropdown-menu" ngbDropdownMenu>
-                        <button class="dropdown-item"><i class="fas fa-edit"></i> Edit</button>
+                        <button class="dropdown-item" (click)="editH2(item)"><i class="fas fa-edit"></i> Edit</button>
                         <button class="dropdown-item"><i class="fas fa-print"></i> Print</button>
+                        <button class="dropdown-item"><i class="fas fa-copy"></i> Clone</button>
                         <button class="dropdown-item"><i class="fas fa-trash"></i> Trash</button>
                       </div>
                     </div>
