--- a/front-end/src/app/forms/sched-h3/sched-h3.component.html
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.html
@@ -23,6 +23,7 @@
         <div class="float-left">
           <h2 *ngIf="transactionType === 'ALLOC_H3_RATIO'">
             Transfers from Nonfederal Accounts for Allocated Federal / Nonfederal Activity
+            <ng-container *ngIf="scheduleAction === editScheduleAction"> / Edit </ng-container>
           </h2>
           <h2 *ngIf="transactionType === 'ALLOC_H3_SUM'">
             Transfers from Nonfederal Accounts for Allocated Federal / Nonfederal Summary
@@ -264,7 +265,7 @@
         </div>
       </div>
 
-      <div class="paragraph">
+      <div *ngIf="scheduleAction !== editScheduleAction" class="paragraph">
         <ng-container>
           <table class="table table-striped table-hover table__sortable">
             <thead>
@@ -329,11 +330,7 @@
                       </button>
 
                       <div id="forms__trx-dropdown-action1" ngbDropdownToggle class="dropdown-menu" ngbDropdownMenu>
-                        <button class="dropdown-item" (click)="viewditH3(item)"><i class="fas fa-eye"></i> View</button>
-                        <button class="dropdown-item" (click)="printH3(item)">
-                          <i class="fas fa-print"></i> Print
-                        </button>
-                        <button class="dropdown-item" (click)="editH3(item)"><i class="fas fa-edit"></i> Edit</button>
+                        <button class="dropdown-item" (click)="editH3Sub(item)"><i class="fas fa-edit"></i> Edit</button>
                         <button class="dropdown-item" (click)="trashH3(item)">
                           <i class="fas fa-trash"></i> Trash
                         </button>
@@ -351,7 +348,7 @@
         </ng-container>
       </div>
 
-      <div class="grid-row">
+      <div *ngIf="scheduleAction !== editScheduleAction" class="grid-row">
         <div class="grid-row__col grid-row__col--12">
           <div class="forms__btn-container">
             <button class="btn btn-primary btn-right" type="button" (click)="saveAndAddMore()">
@@ -366,12 +363,22 @@
           <div class="grid-row">
             <div class="grid-row__col grid-row__col--12">
               <div class="forms__btn-container">
-                <button class="btn btn-previous btn-left" type="button" (click)="clearFormValues(); previousStep()">
-                  Previous
-                </button>
-                <a class="btn btn-primary btn-right" (click)="returnToSum()">
-                  View Summary
-                </a>
+                <div *ngIf="scheduleAction === addScheduleAction">
+                  <button class="btn btn-previous btn-left" type="button" (click)="clearFormValues(); previousStep()">
+                    Previous
+                  </button>
+                  <a class="btn btn-primary btn-right" (click)="returnToSum()">
+                    View Summary
+                  </a>
+                </div>
+                <div *ngIf="scheduleAction === editScheduleAction">
+                  <button class="btn btn-previous btn-left" type="button" (click)="returnToSum()">
+                      Cancel
+                    </button>
+                    <button class="btn btn-primary btn-right" type="button" (click)="saveEdit()">
+                      Save
+                    </button>
+                </div>
               </div>
             </div>
           </div>
@@ -436,9 +443,9 @@
                   </button>
 
                   <div id="forms__trx-dropdown-action1" ngbDropdownToggle class="dropdown-menu" ngbDropdownMenu>
-                    <button class="dropdown-item" (click)="viewditH3(item)"><i class="fas fa-eye"></i> View</button>
-                    <button class="dropdown-item" (click)="printH3(item)"><i class="fas fa-print"></i> Print</button>
                     <button class="dropdown-item" (click)="editH3(item)"><i class="fas fa-edit"></i> Edit</button>
+                    <button class="dropdown-item" (click)="printH3(item)"><i class="fas fa-print"></i> Print</button>
+                    <button class="dropdown-item"><i class="fas fa-copy"></i> Clone</button>
                     <button class="dropdown-item" (click)="trashH3(item)"><i class="fas fa-trash"></i> Trash</button>
                   </div>
                 </div>
