fixed aot and prod build fixes

--- a/front-end/src/app/contacts/contacts-table/trash-confirm/trash-confirm.component.html
+++ b/front-end/src/app/contacts/contacts-table/trash-confirm/trash-confirm.component.html
@@ -4,4 +4,6 @@
       <li *ngFor="let trx of transactions">{{trx.transactionId}}</li>
     </ul>
   </div>
+
+  TEST TEST TEST TEST
 </ngbd-modal-content>
