--- a/front-end/src/app/forms/sched-c/endorser-summary/endorser-summary.component.html
+++ b/front-end/src/app/forms/sched-c/endorser-summary/endorser-summary.component.html
@@ -14,7 +14,7 @@
     <thead>
       <tr>
         <th class="endorserSummary__table-checkbox">
-        <input [@fadeInOut]  [(ngModel)]="allendorserSummarysSelected" type="checkbox"
+        <input [@fadeInOut]  [(ngModel)]="allEndorserSelected" type="checkbox"
             (change)="changeAllendorserSummarysSelected()">
         </th>
          <th [@fadeInOut]  [class]="getSortClass('name')" (click)="changeSortDirection('name')">Name
