--- a/front-end/src/app/forms/sched-h6/sched-h6.component.html
+++ b/front-end/src/app/forms/sched-h6/sched-h6.component.html
@@ -125,7 +125,7 @@
       </footer>
     </section>
 
-    <section *ngIf="transactionType === 'ALLOC_H6_SUM' && transactionType !== 'ALLOC_EXP_DEBT'">
+    <section *ngIf="transactionType === 'ALLOC_H6_SUM'">
       <div [hidden]="showPart2" class="paragraph">
         <ng-container>              
             <table class="table table-striped table-hover table__sortable">
