--- a/front-end/src/app/shared/partials/submit/submit.component.html
+++ b/front-end/src/app/shared/partials/submit/submit.component.html
@@ -18,7 +18,7 @@
               If you don't receive a confirmation email, please contact the Electronic Filing Office at (202) 694-1307.        
         </div>
       </div>
-      <div class="grid-row" *ngIf="!_checkStatus">
+      <div class="grid-row" *ngIf="!checkStatus">
           <div class="grid-row__col grid-row__col--12">
               <br />
             Your filling ID is FEC-{{FEC_Id}}
