--- a/front-end/src/app/forms/sched-c1/sched-c1.component.html
+++ b/front-end/src/app/forms/sched-c1/sched-c1.component.html
@@ -21,7 +21,7 @@
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
             <button class="dropdown-item" (click)="printPreview()"><i class="print-icon"></i> Print</button>
             <button class="dropdown-item">
-              <i class="file-import-icon" (click)="ImportTransactions()"></i> Import
+              <i class="file-import-icon" (click)="importTransactions()"></i> Import
             </button>
           </div>
         </div>
