--- a/front-end/src/app/forms/sched-h4/sched-h4.component.html
+++ b/front-end/src/app/forms/sched-h4/sched-h4.component.html
@@ -136,7 +136,7 @@
       </footer>
     </section>
 
-    <section *ngIf="transactionType === 'ALLOC_H4_SUM' && transactionType !== 'ALLOC_EXP_DEBT'">
+    <section *ngIf="transactionType === 'ALLOC_H4_SUM'">
       <div [hidden]="showPart2" class="paragraph">
         <ng-container>              
             <table class="table table-striped table-hover table__sortable">
